fixed issue #1 'items can be stuck under a list'

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,6 @@ body {
 .element {
     padding: 2rem;
     background: orange;
-    
+    user-select: none;
    
 }
